--- a/package.json
+++ b/package.json
@@ -11,5 +11,8 @@
     "express": "^4.18.2",
     "mqtt": "^4.3.7",
     "pg": "^8.11.1"
+  },
+  "devDependencies": {
+    "typescript": "^5.2.2"
   }
 }
