--- a/package.json
+++ b/package.json
@@ -12,7 +12,14 @@
     "mqtt": "^4.3.7",
     "pg": "^8.11.1"
   },
+  "scripts": {
+    "start": "ts-node-dev --respawn --transpile-only ./lib/index.ts"
+  },
   "devDependencies": {
+    "@types/express": "^4.17.20",
+    "@types/node": "^20.8.7",
+    "@types/pg": "^8.10.7",
+    "ts-node-dev": "^2.0.0",
     "typescript": "^5.2.2"
   }
 }
